--- a/drivers/timer/Kconfig
+++ b/drivers/timer/Kconfig
@@ -221,6 +221,20 @@ config XTENSA_TIMER_IRQ_PRIORITY
 	help
 	  This is the priority of interrupt line.
 
+config ULTIPARC_TIMER
+	bool "Ultiparc SoC timer"
+	default n
+	depends on SOC_ULTIPARC_RTL
+	help
+	  This module implements a kernel device driver for the Ultiparc machine
+	  timer driver. It provides the standard "system clock driver" interfaces.
+
+config ULTIPARC_TIMER_BASE_ADDRESS
+	hex "Ultiparc timer base address"
+	default 0x80300000
+	help
+	  This options specifies the base I/O address of the Ultiparc Interval Timer.
+
 config SYSTEM_CLOCK_DISABLE
 	bool "API to disable system clock"
 	help
