--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -35,6 +35,10 @@ config RISCV32
 config XTENSA
 	bool "Xtensa architecture"
 
+config ULTIPARC
+	bool "Ultiparc architecture (MIPS-I)"
+	select ATOMIC_OPERATIONS_C
+
 config ARCH_POSIX
 	bool "POSIX (native) architecture"
 	select ATOMIC_OPERATIONS_BUILTIN
